another small update to github commit api
